k8s.yml
apiVersion: v1
kind: Namespace
metadata:
  name: mxmariner
---
apiVersion: v1
kind: Service
metadata:
  name: mxmariner-web-svc
  namespace: mxmariner
spec:
  ports:
    - name: http
      port: 8088
      targetPort: 8088
  selector:
    app: mxmariner-web-svc
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mxmariner-web-dep
  namespace: mxmariner
spec:
  selector:
    matchLabels:
      app: mxmariner-web-svc
  template:
    metadata:
      labels:
        app: mxmariner-web-svc
    spec:
      imagePullSecrets:
        - name: ghreg
      containers:
        - image: ghcr.io/manimaul/mxmariner.com:03-04-26_r0
          imagePullPolicy: Always
          name: mxmariner-web-svc
          ports:
            - containerPort: 8088
              name: http
          resources:
            requests:
              cpu: 100m
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mxmariner
  namespace: mxmariner
spec:
  ingressClassName: haproxy
  rules:
    - host: mxmariner.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mxmariner-web-svc
                port:
                  number: 8088
    - host: www.mxmariner.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mxmariner-web-svc
                port:
                  number: 8088
  tls:
    - hosts:
        - mxmariner.com
        - www.mxmariner.com
      secretName: mxmariner-cert
